# opendeepsearch_mcp

./: .gitignore  .mcp.json  Dockerfile  README.md  RELEASE_NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt  smithery.yaml
.github/workflows/: python-publish.yml
src/: __init__.py  server.py
tests/: test_perform_search_tool.py
