[project]
name = "opendeepsearch-mcp"
version = "0.1.0"
description = "MCP server for OpenDeepSearch"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "opendeepsearch @ git+https://github.com/sentient-agi/OpenDeepSearch.git",
    "mcp==1.5.0",
    "nest_asyncio>=1.5.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Script entry point
[project.scripts]
opendeepsearch-mcp = "src:main"