[project]
name = "opendeepsearch-mcp"
version = "0.1.0"
description = "MCP server for OpenDeepSearch"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "opendeepsearch @ git+https://github.com/sengokudaikon/OpenDeepSearch.git",
    "mcp==1.5.0",
    "nest_asyncio>=1.5.6",
    "torch==2.1.0",
    "numpy==1.26.4",
    "loguru",
    "transformers>=4.49.0",
    "openai>=1.66.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Script entry point
[project.scripts]
opendeepsearch-mcp = "src:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]
